== 3.5.0.8 ==

* Fixed: buddypress bug resolved where first name and last name weren't written to the database 

== 3.5.0.7 ==

* Fixed: tables with mediumtext columns data type modified to text data type 

== 3.5.0.6 ==

* Fixed: disappearing menu bug

== 3.5.0.5 ==

* Fixed: rules in inactive access levels were still being applied

== 3.5.0.4 ==

* Additional fixes for category rules
 
== 3.5.0.3 ==

* Fixed: notices/warnings in menu

== 3.5.0.2 ==

* Fixed: category rules would apply to custom post types (e.g. menu items, etc) causing those elements to not show up
* Fixed: authorize.net errors when using a dripped content setup http://wp.mu/92g
* Fixed: remove old subscription when updating http://wp.mu/92h
* Fixed: membership menu would some times not show up in wp-admin
 
== 3.5.0.1 ==

* Fixed bug with Chinese characters in form fields not saving/rendering properly http://wp.mu/925

== 3.5 ==

* Fixed network/super admin permissions
* Fixed bugs with global cart
* Fixed admin menu protection rules
* Fixed BuddyPress private messages protection rule
* Fixed issue with showing posts from protected categories
* Fixed popup complete message links rendering issue
* Fixed warning message which appear for subscriptions without access levels
* Fixed members pagination issue when filter becomes reset after going to the next page
* Fixed coupons start date issue
* Fixed coupons timezones issue
* Fixed multiple levels compatibility issue
* Fixed infinite transition issue for indefinite subscriptions when period set improperly
* Fixed &USD; rendering issue
* Fixed issue which allows deactivated users to have access to a site
* Fixed admin bar issue which appear when global tables are used
* Fixed account page submission issue.
* Fixed login widget redirect issue
* Fixed PayPal Standard Payment gateway transactions date issue
* Fixed PayPal subscription suspended issue due to max fails limit settings
* Fixed category protection issue